--- a/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/CargaConcentrado.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/CargaConcentrado.cshtml
@@ -50,7 +50,7 @@
 
         <!-- Sección: Generar Plantilla -->
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" style="display:none">
                 <div class="form-section">
                     <h4>Generar Plantilla en Excel</h4>
                     @using (Html.BeginForm("GenerarPlantilla", null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal js-allow-double-submission" }))
@@ -58,20 +58,20 @@
                         <div class="form-row">
                             <div class="form-group col-md-3">
                                 @Html.Label("Planta", new { @class = "control-label" })
-                                @Html.DropDownList("planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                @Html.DropDownList("planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", disabled="disabled" })
                             </div>
                             <div class="form-group col-md-3">
                                 @Html.Label("Año Fiscal", new { @class = "control-label" })
-                                @Html.DropDownList("id_fiscal_year", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", required = "required" })
+                                @Html.DropDownList("id_fiscal_year", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", required = "required", disabled = "disabled" })
                                 <span class="text-danger" data-valmsg-for="id_fiscal_year" data-valmsg-replace="true"></span>
                             </div>
                             <div class="form-group col-md-4">
                                 @Html.Label("Centro de Costo", new { @class = "control-label" })
-                                @Html.DropDownList("centro_costo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                @Html.DropDownList("centro_costo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", disabled = "disabled" })
                                 <span class="text-danger" data-valmsg-for="centro_costo" data-valmsg-replace="true"></span>
                             </div>
                             <div class="form-group col-md-2 align-self-end">
-                                <input type="submit" id="button_submit" value="Generar Plantilla" class="btn-sm btn-success btn-block" />
+                                <input type="submit" id="button_submit" value="Generar Plantilla" class="btn-sm btn-success btn-block" disabled/>
                             </div>
                         </div>
                     }
