2025-03-03 Se sube avance en sistema de controlling budget.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -802,6 +802,7 @@
                                                             <li class="@(ViewBag.TercelNivel == "BG_CuentasSAP" ? "current-page" : null )"><a href="@Url.Action( "Index", "BG_CuentasSAP")">Cuentas SAP</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "BG_Gastos_Mantenimiento" ? "current-page" : null )"><a href="@Url.Action( "ActualizaGastosManto", "ResponsableBudget")">Actualiza Gastos de Manto</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "budget_rel_tipo_cambio_fy" ? "current-page" : null )"><a href="@Url.Action( "Index", "budget_rel_tipo_cambio_fy")">Tipo de Cambio</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "budget_target" ? "current-page" : null )"><a href="@Url.Action( "Index", "budget_target")">Targets</a></li>
 
                                                         </ul>
                                                     </li>
