--- a/CódigoFuente/BitacorasProduccion/Views/budget_rel_tipo_cambio_fy/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/budget_rel_tipo_cambio_fy/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<Portal_2_0.Controllers.FiscalRateViewModel>
 @{
     ViewBag.Title = "Listado de Tipos de Cambio Fiscal";
-    ViewBag.PrimerNivel = "cotizador";
-    ViewBag.SegundoNivel = "index_tiposCambio";
+    ViewBag.PrimerNivel = "plantilla_budget";
+    ViewBag.SegundoNivel = "catalogos";
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
     ViewBag.nav_style = "nav-sm";
 }
