--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -312,16 +312,16 @@
 
                                                 <li class="@(ViewBag.SegundoNivel == "IT_reporte_usuarios" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_reporte_usuarios")">Reportes Usuarios</a></li>
                                                 @*<li class="@(ViewBag.SegundoNivel == "IT_epo" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_epo")">Carga EPO</a></li>
-                    <li class="@(ViewBag.SegundoNivel == "IT_wsus" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_wsus")">Carga WSUS</a></li>
-                    <li class="link @(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "active" : null )">
-                        <a>Repotes<span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_epo_wsus_reporte" ? "display:block" : null )">
-                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_epo_no_inventario" ? "current-page" : null )"><a href="@Url.Action("EpoNoInventario", "IT_epo_wsus_reporte")">En ePO NO Inventario</a></li>
-                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_inventario_no_epo" ? "current-page" : null )"><a href="@Url.Action("InventarioNoEpo", "IT_epo_wsus_reporte")">En Inventario NO ePO</a></li>
-                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_wsus_no_inventario" ? "current-page" : null )"><a href="@Url.Action("WsusNoInventario", "IT_epo_wsus_reporte")">En Wsus NO Inventario</a></li>
-                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_inventario_no_wsus" ? "current-page" : null )"><a href="@Url.Action("InventarioNoWsus", "IT_epo_wsus_reporte")">En Inventario NO wsus</a></li>
-                        </ul>
-                    </li>*@
+                                                    <li class="@(ViewBag.SegundoNivel == "IT_wsus" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_wsus")">Carga WSUS</a></li>
+                                                    <li class="link @(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "active" : null )">
+                                                        <a>Repotes<span class="fa fa-chevron-down"></span></a>
+                                                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_epo_wsus_reporte" ? "display:block" : null )">
+                                                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_epo_no_inventario" ? "current-page" : null )"><a href="@Url.Action("EpoNoInventario", "IT_epo_wsus_reporte")">En ePO NO Inventario</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_inventario_no_epo" ? "current-page" : null )"><a href="@Url.Action("InventarioNoEpo", "IT_epo_wsus_reporte")">En Inventario NO ePO</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_wsus_no_inventario" ? "current-page" : null )"><a href="@Url.Action("WsusNoInventario", "IT_epo_wsus_reporte")">En Wsus NO Inventario</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_epo_wsus_reporte_inventario_no_wsus" ? "current-page" : null )"><a href="@Url.Action("InventarioNoWsus", "IT_epo_wsus_reporte")">En Inventario NO wsus</a></li>
+                                                        </ul>
+                                                    </li>*@
                                             </ul>
 
                                         </li>
@@ -403,15 +403,15 @@
 
 
                                     @*@if (User.IsInRole(TipoRoles.REPORTES_PESADAS))
-        {
-            <li class="@(ViewBag.PrimerNivel == "reporte_pesos" ? "active" : null )">
-                <a><i class="fa fa-file-excel"></i>Reporte Pesadas <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "reporte_pesos" ? "display:block" : null )">
-                    <li class="@(ViewBag.SegundoNivel == "reporte_pesos_silao" ? "current-page" : null )"><a href="@Url.Action( "Silao", "ReportePesadas")">Silao</a></li>
-                    <li class="@(ViewBag.SegundoNivel == "reporte_pesos_puebla" ? "current-page" : null )"><a href="@Url.Action( "Puebla", "ReportePesadas")">Puebla</a></li>
-                </ul>
-            </li>
-        }*@
+                                        {
+                                            <li class="@(ViewBag.PrimerNivel == "reporte_pesos" ? "active" : null )">
+                                                <a><i class="fa fa-file-excel"></i>Reporte Pesadas <span class="fa fa-chevron-down"></span></a>
+                                                <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "reporte_pesos" ? "display:block" : null )">
+                                                    <li class="@(ViewBag.SegundoNivel == "reporte_pesos_silao" ? "current-page" : null )"><a href="@Url.Action( "Silao", "ReportePesadas")">Silao</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "reporte_pesos_puebla" ? "current-page" : null )"><a href="@Url.Action( "Puebla", "ReportePesadas")">Puebla</a></li>
+                                                </ul>
+                                            </li>
+                                        }*@
 
                                     @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REPORTE))
                                     {
@@ -782,8 +782,8 @@
                                                 {
                                                     <h3>Centros de Costo</h3>
                                                     @*<li class="@(ViewBag.SegundoNivel == "actual" ? "current-page" : null )"><a href="@Url.Action("Actual", "ResponsableBudget")">ACT FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(-1)))</a></li>
-                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
-                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
+                                                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
+                                                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
                                                     <li class="@(ViewBag.SegundoNivel == "centros" ? "current-page" : null )"><a href="@Url.Action("Centros", "ResponsableBudget")">Mis Centros de Costo</a></li>
                                                 }
 
@@ -803,7 +803,6 @@
                                                             <li class="@(ViewBag.TercelNivel == "BG_Gastos_Mantenimiento" ? "current-page" : null )"><a href="@Url.Action( "ActualizaGastosManto", "ResponsableBudget")">Actualiza Gastos de Manto</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "budget_rel_tipo_cambio_fy" ? "current-page" : null )"><a href="@Url.Action( "Index", "budget_rel_tipo_cambio_fy")">Tipo de Cambio</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "budget_target" ? "current-page" : null )"><a href="@Url.Action( "Index", "budget_target")">Targets</a></li>
-
                                                         </ul>
                                                     </li>
 
@@ -819,6 +818,26 @@
                                         </li>
 
                                     }
+                                    @*MENÚ PLANTILLA BUDGET*@
+                                    @if (User.IsInRole(TipoRoles.BG_CONTROLLING))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "plantilla_forecast" ? "active" : null )">
+                                            <a><i class="fa-solid fa-money-bill-trend-up" style="color:yellow"></i>Forecast<span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu">
+                                                <h3>Controlling</h3>
+                                                <li class="@(ViewBag.SegundoNivel == "centro_costos" ? "current-page" : null )"><a href="@Url.Action("Centros", "BudgetControlling")">Centros de Costo</a></li>
+                                                <li class="link @(ViewBag.SegundoNivel == "catalogos" ? "active" : "" )">
+                                                    <a>Cat&aacute;logos <span class="fa fa-chevron-down"></span></a>
+                                                    <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "BG_catalogos" ? "display:block" : null )">
+                                                        <li class="@(ViewBag.TercelNivel == "budget_rel_tipo_cambio_fy" ? "current-page" : null )"><a href="@Url.Action( "Index", "budget_rel_tipo_cambio_fy")">Tipo de Cambio</a></li>                                                        
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+
+                                    }
+
+
 
                                     @*MENÚ DE USUARIOS*@
 
@@ -849,7 +868,7 @@
                                                 {
                                                     <li class="@(ViewBag.SegundoNivel == "RH_menu_comedor" ? "current-page" : null )"><a href="@Url.Action("Index", "RH_menu_comedor", new {id_planta = 1})">Actualizar Men&uacute; - Puebla</a></li>
                                                     @*
-                        <li class="@(ViewBag.SegundoNivel == "RH_menu_comedor_dl" ? "current-page" : null )"><a href="@Url.Action("ListaDistribucion", "RH_menu_comedor")">Men&uacute; Comedor - DL</a></li>
+                                                        <li class="@(ViewBag.SegundoNivel == "RH_menu_comedor_dl" ? "current-page" : null )"><a href="@Url.Action("ListaDistribucion", "RH_menu_comedor")">Men&uacute; Comedor - DL</a></li>
                                                     *@
                                                 }
                                                 @if (User.IsInRole(TipoRoles.RH_MENU_COMEDOR_VISUALIZAR_PUEBLA))
@@ -924,8 +943,8 @@
                                                 {
                                                     <h3>Carga Archivos</h3>
                                                     @*<li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("carga_inventario_sap", "CI_conteo_inventario")">1.- Carga de Inventario SAP</a></li>
-                        <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("carga_tolerancias", "CI_conteo_inventario")">2.- Carga de Tolerancias </a></li>
-                        <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("restablecer", "CI_conteo_inventario")">Restablecer Datos Capturados </a></li>*@
+                                                        <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("carga_tolerancias", "CI_conteo_inventario")">2.- Carga de Tolerancias </a></li>
+                                                        <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("restablecer", "CI_conteo_inventario")">Restablecer Datos Capturados </a></li>*@
                                                     <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("Index", "Inv_CargaArchivos")">Carga de Archivos</a></li>
                                                 }
                                                 <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("Index", "Inv_Captura", new {plantaFiltro = "5390"})">Inventario Silao (5390)</a></li>
